--- a/frontend/src/i18n/locales/zh-cn.json
+++ b/frontend/src/i18n/locales/zh-cn.json
@@ -309,8 +309,8 @@
       "it": "它",
       "resolves-to": "解析为",
       "is": "是",
-      "is-erc20": "一个 ERC20 代币",
-      "is-erc721": "一个 ERC721 代币",
+      "is-erc20": "它是一个 ERC-20 代币",
+      "is-erc721": "它是一个 ERC-721 令牌",
       "same-addr-as-wallet": "与连接的钱包地址相同",
       "same-addr-as-stealth": "与隐形地址相同",
       "address-it-resolves-to": "它解析为的地址",
