--- a/frontend/src/i18n/locales/en-us.json
+++ b/frontend/src/i18n/locales/en-us.json
@@ -306,8 +306,8 @@
       "it": "It",
       "resolves-to": "resolves to",
       "is": "is",
-      "is-erc20": "an ERC20 token",
-      "is-erc721": "an ERC721 token",
+      "is-erc20": "It is an ERC-20 token",
+      "is-erc721": "It is an ERC-721 token",
       "same-addr-as-wallet": "the same address as the connected wallet",
       "same-addr-as-stealth": "the same address as the stealth address",
       "address-it-resolves-to": "The address it resolves to",
