--- a/frontend/src/i18n/locales/en-us.json
+++ b/frontend/src/i18n/locales/en-us.json
@@ -78,7 +78,8 @@
     "amount-exceeds-balance": "Amount exceeds wallet balance",
     "please-complete-form": "Please complete the form",
     "wallet-not-connected": "Wallet not connected",
-    "umbra-fee-exceeds-balance": "required for Umbra fee exceeds wallet balance"
+    "umbra-fee-exceeds-balance": "required for Umbra fee exceeds wallet balance",
+    "advanced-mode-warning": "Using advanced mode may lead to actions that make funds unrecoverable!"
   },
   "Receive": {
     "receive": "Receive",
@@ -310,6 +311,9 @@
       "same-addr-as-stealth": "the same address as the stealth address",
       "address-it-resolves-to": "The address it resolves to",
       "has-poap-tokens": "has POAP tokens"
+    },
+    "Dialog": {
+      "warning": "Warning!"
     }
   },
   "connect": {
