--- a/frontend/src/i18n/locales/zh-cn.json
+++ b/frontend/src/i18n/locales/zh-cn.json
@@ -250,7 +250,7 @@
     "fee-not-set": "费用未设置：Fee is not set",
     "invalid-chain-id": "无效的链 ID：Invalid chainID",
     "receiver-tool-tip": "收到这些资金的隐形地址看起来像是一个空地址。它不能被追随到您的帐户，但只有您有能力生成其私钥。",
-    "loss-warning": "看起来您正在尝试将资金提取到代币合约。这很可能不是您的本意，继续操作可能会导致资金损失。除非您确切知道自己在做什么，否则不要继续",
+    "loss-warning": "看起来您正在尝试将资金提取到代币合约中。这很可能不是您的本意，继续操作可能会导致资金损失。除非您确切知道自己在做什么，否则不要继续",
     "i-know-what": "我知道我在做什么",
     "danger": "危险"
   },
