Fix typo in loss message

--- a/frontend/src/i18n/locales/en-us.json
+++ b/frontend/src/i18n/locales/en-us.json
@@ -79,7 +79,7 @@
     "please-complete-form": "Please complete the form",
     "wallet-not-connected": "Wallet not connected",
     "umbra-fee-exceeds-balance": "required for Umbra fee exceeds wallet balance",
-    "advanced-send-warning": "The receiver will have to enter their account's private key into this app to withdrawal the funds. Don't use this feature unless you know what you're doing.",
+    "advanced-send-warning": "The receiver will have to enter their account's private key into this app to withdraw the funds. Don't use this feature unless you know what you're doing.",
     "learn-more": "Learn more",
     "acknowledge-risks": "I acknowledge the risks"
   },
