Add copy translations

--- a/frontend/src/i18n/locales/en-us.json
+++ b/frontend/src/i18n/locales/en-us.json
@@ -284,6 +284,13 @@
   "ConnectWalletCard": {
     "connect-wallet": "Connect Wallet"
   },
+  "WalletRow": {
+    "account": "Account",
+    "address-copied": "Address copied to clipboard",
+    "connected-with": "Connected with",
+    "copy-address": "Copy address",
+    "view-on-explorer": "View on explorer"
+  },
   "WithdrawForm": {
     "withdraw-address": "Enter address to withdraw funds to",
     "address": "Address",
