Added changes based on comments

--- a/frontend/src/i18n/locales/en-us.json
+++ b/frontend/src/i18n/locales/en-us.json
@@ -286,6 +286,7 @@
   },
   "WalletRow": {
     "account": "Account",
+    "disconnect": "Disconnect",
     "address-copied": "Address copied to clipboard",
     "connected-with": "Connected with",
     "copy-address": "Copy address",
