--- a/frontend/src/i18n/locales/en-us.json
+++ b/frontend/src/i18n/locales/en-us.json
@@ -279,12 +279,27 @@
     "view-transaction": "View transaction"
   },
   "AccountSendTable": {
+    "address-copied": "Receiver address copied to clipboard",
     "account-empty": "No funds sent in this browser",
     "address": "Recipient address",
     "amount": "Amount",
     "date-sent": "Date sent",
     "hash": "Transaction hash",
-    "sent-funds": "Sent funds"
+    "receiver": "Receiver",
+    "received": "Received",
+    "sent-funds": "Sent funds",
+    "wallet-not-connected": "Wallet not connected. Try refreshing the page and connect your wallet"
+  },
+  "AccountSent": {
+    "connect-wallet": "Connect Wallet",
+    "connect-your-wallet": "Connect your wallet to send funds",
+    "need-signature": "This app needs your signature to scan for funds you've received",
+    "scan": "Scan",
+    "scan-funds": "Click below to scan for funds you've received",
+    "scanning": "Scanning for funds...",
+    "sign": "Sign",
+    "wait": "This may take a couple of minutes depending on your connection and device. This is normal&mdash; please be patient.",
+    "valid-private-key-missing": "No valid private key was provided. Cannot fetch sent transactions"
   },
   "Argent": {
     "warning": "Warning: Argent Compatibility Issues",
