--- a/frontend/src/i18n/locales/en-us.json
+++ b/frontend/src/i18n/locales/en-us.json
@@ -11,7 +11,9 @@
       "sending-funds": "Sending Funds",
       "send-first": "Get the address, ENS, or CNS name of the person you're sending funds to",
       "send-second": "Complete the form on the <span class=\"text-bold\">Send</span> page"
-    }
+    },
+    "banner": "Umbra is part of Gitcoin's Alpha matching round. Please consider {0} development. Learn more.",
+    "banner-link": "supporting"
   },
   "Home-action-card": {
     "send": "Send",
