--- a/frontend/src/i18n/locales/zh-cn.json
+++ b/frontend/src/i18n/locales/zh-cn.json
@@ -12,8 +12,9 @@
       "send-first": "获取您要向其汇款的人员的地址、ENS 或 CNS 姓名",
       "send-second": "填写<span class=\"text-bold\">发送</span>页面上的表单"
     },
-    "banner": "Umbra正在Gitcoin Alpha轮里匹配捐赠。请考虑{0}。了解更多。",
-    "banner-link": "支持开发"
+    "banner": "Umbra正在Gitcoin Alpha轮里匹配捐赠。请考虑{supporting}开发。{LearnMore}。",
+    "supporting": "支持",
+    "learn-more": "了解更多"
   },
   "Home-action-card": {
     "send": "发送",
