fix: add missing connect wallet translation

--- a/frontend/src/i18n/locales/zh-CN.json
+++ b/frontend/src/i18n/locales/zh-CN.json
@@ -32,6 +32,7 @@
     "contact": "联系"
   },
   "Base-Layout": {
+    "connect-wallet": "连接钱包",
     "settings": "设置",
     "dark-mode": "深色模式",
     "advanced-mode": "高级模式",
