--- a/frontend/src/i18n/locales/en-US.json
+++ b/frontend/src/i18n/locales/en-US.json
@@ -32,6 +32,7 @@
     "contact": "Contact"
   },
   "Base-Layout": {
+    "connect-wallet": "Connect Wallet",
     "settings": "Settings",
     "dark-mode": "Dark mode",
     "advanced-mode": "Advanced mode",
