--- a/frontend/src/i18n/locales/zh-CN.json
+++ b/frontend/src/i18n/locales/zh-CN.json
@@ -89,7 +89,8 @@
     "umbra-fee-exceeds-balance": "需要的 Umbra 费用超过钱包金额",
     "advanced-send-warning": "接收者必须将其帐户的私钥输入此应用程序才能提取资金。除非您知道自己在做什么，不要使用此功能",
     "learn-more": "了解更多信息",
-    "acknowledge-risks": "我承认风险"
+    "acknowledge-risks": "我承认风险",
+    "send-history": "发送历史记录"
   },
   "Receive": {
     "receive": "接收",
