--- a/frontend/src/i18n/locales/zh-CN.json
+++ b/frontend/src/i18n/locales/zh-CN.json
@@ -296,12 +296,12 @@
     "amount": "金额",
     "date-sent": "发送日期",
     "receiver": "收款人",
-    "sent-funds": "已发送的资金"
+    "sent-funds": "已发送的资金",
+    "storage-description": "发送历史记录是当前浏览器的本地发送历史记录，从其他浏览器或不同设备访问时会有所不同。我们这样做是为了最大限度地提高您的安全和隐私。"
   },
   "AccountSent": {
     "connect-wallet": "连接钱包",
-    "connect-your-wallet": "连接您的钱包以发送资金",
-    "storage-description": "发送历史记录是当前浏览器的本地发送历史记录，从其他浏览器或不同设备访问时会有所不同。我们这样做是为了最大限度地提高您的安全和隐私。"
+    "connect-your-wallet": "连接您的钱包以发送资金"
   },
   "ConnectWalletCard": {
     "connect-wallet": "连接钱包"
