feat: send native token max without dust (#390)
* Implement sendMax for native tokens

* Correctly handle "max fee per gas less than block base fee" error

* Fix native send max for Optimism

* Specify gasPrice when sending max to stop wallets from rugging us

* Throw error when native balance < toll

* yarn prettier + yarn lint

* Add Chinese translation for error msg

* Apply suggestions from code review

Co-authored-by: Matt Solomon <matt@mattsolomon.dev>

* If the network doesn't support 1559 pricing, base fee is 0 not 1

* Fix failing builds

---------

Co-authored-by: garyghayrat <f255eb47-1441-48a5-be8e-0a9e3193245c@anonaddy.me>
Co-authored-by: Matt Solomon <matt@mattsolomon.dev>

--- a/frontend/src/i18n/locales/en-US.json
+++ b/frontend/src/i18n/locales/en-US.json
@@ -68,6 +68,7 @@
     "question-circle-warning": "Don't use this feature unless you know what you're doing.",
     "learn-more": "Learn more",
     "select-token": "Select token to send",
+    "slippage-exceeded": "Actual send amount would materially differ from the estimate due to changing gas prices. Please try again.",
     "token": "Token",
     "amount": "Amount to send",
     "summary": "Summary",
@@ -76,6 +77,7 @@
     "fee-explain": "Transactions on %{chainName} are very cheap, so a small fee is charged to deter spamming the protocol.",
     "total": "Total",
     "max": "Max",
+    "max-native-less-than-toll": "Cannot send max. Balance less than toll.",
     "copy-payment-link": "Copy payment link",
     "enter-an-amount": "Please enter an amount",
     "enter-a-recipient": "Please enter a recipient",
