--- a/frontend/src/i18n/locales/zh-CN.json
+++ b/frontend/src/i18n/locales/zh-CN.json
@@ -68,6 +68,7 @@
     "question-circle-warning": "除非您知道自己在做什么，不要使用此功能。",
     "learn-more": "了解更多",
     "select-token": "选择要发送的代币",
+    "slippage-exceeded": "由于费用价格的变化，实际发送量将与估计值有很大差异。请重试。",
     "token": "代币",
     "amount": "汇款金额",
     "summary": "总结",
@@ -76,6 +77,7 @@
     "fee-explain": "在 %{chainName} 上交易非常便宜，因此会收取少量费用以阻止垃圾信息。",
     "total": "总额",
     "max": "最大限额",
+    "max-native-less-than-toll": "无法发送最大限额。费用超过钱包金额。",
     "copy-payment-link": "复制付款链接",
     "enter-an-amount": "请输入金额",
     "enter-a-recipient": "请输入收款人",
