--- a/frontend/src/i18n/locales/en-US.json
+++ b/frontend/src/i18n/locales/en-US.json
@@ -371,7 +371,7 @@
       }
     },
     "connectingWallet": {
-      "header": "{connectionRejected, select, false {Connecting to {wallet}...} other {Connection Rejected}}",
+      "header": "Connection Rejected",
       "sidebar": {
         "subheading": "Approve Connection",
         "paragraph": "Please approve the connection in your wallet and authorize access to continue."
