Add new locale for reset

--- a/frontend/src/i18n/locales/en-US.json
+++ b/frontend/src/i18n/locales/en-US.json
@@ -273,6 +273,7 @@
   },
   "AccountReceiveTableWithdrawConfirmation": {
     "confirm": "Confirm",
+    "reset": "Reset",
     "cancel": "Cancel",
     "confirm-withdrawal": "Confirm Withdrawal",
     "to": "Withdrawing to",
