--- a/frontend/src/i18n/locales/zh-CN.json
+++ b/frontend/src/i18n/locales/zh-CN.json
@@ -274,6 +274,7 @@
   },
   "AccountReceiveTableWithdrawConfirmation": {
     "confirm": "确认",
+    "reset": "重置",
     "cancel": "取消",
     "confirm-withdrawal": "确认提款",
     "to": "提取到",
